# gdsge

./: .gitattributes  .gitignore  Changelog.md  LICENSE  PROGRESS.md  README.md  README_compiler_macOS.md  README_compiler_macOS_silicon.md  refactor_summary.md
docs/: architecture.md  deferred-features.md  ir-schema.md  ir-versioning.md  notes-for-agents.md  perf-report.md  user-guide.md
include/: MatlabInterpEval.h  adept_extension.h  asg.h  asg_adouble.h  asg_matlab.h  codosol.h  cubic_spline_notaknot.h  interp_eval_double.h  interp_lite.h  mkl_dummy_interp.h  pin_omp_runtime.h  probdist.h  wl_math.h
licenses/: copyright_codosol.txt  copyright_myppual.txt  license_adept.txt  myppual.txt  v2struct.txt
plugins/: g++_maca64.xml  g++_maci64.xml  gdsge_notepad.xml
pyext/: README.md  pyproject.toml
pyext/gdsge_sympy/: __init__.py  ast_to_sympy.py  ccode_helpers.py  diff_body.py
pyext/tests/: test_ast_to_sympy.py  test_diff_body.py  test_smoke.py
source/: asg.m  asg_mex.cpp  asg_mex.mexa64  asg_mex.mexmaca64  asg_mex.mexmaci64  asg_mex.mexw64  compile_asg.m  compile_asg_MinGW.m  compile_asg_linux.m  compile_asg_macOS.m  compile_asg_macOS.txt  convert_to_interp_eval_array.m  essential_blas.h  export_sym.m  gdsge.m  gdsge_codegen.m  gdsge_parser.m  get_scalar.m  myppual.m  myppual_mex.mexa64  myppual_mex.mexmaca64
source/@sym/: abs.p  acos.p  acosh.p  acot.p  acoth.p  acsc.p  acsch.p  adjoint.p  airy.p  angle.p  asec.p  asech.p  asin.p  asinh.p  atan.p  atan2.p  atanh.p  bernoulli.p  (+250 more)
src/: asg.m  gdsge.m  gdsge_codegen.m  gdsge_setup_sympy.m
tests/: runtests.m
(+280 files in other folders)
